--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
 
 <form class="form login-form">
     <div class="form-group">
-        <label for="email-login">Username:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
     </div>
     <div class="form-group">
         <label for="password-login">Password:</label>
@@ -12,6 +12,7 @@
     <div class="form-group">
         <button class="btn btn-primary" type="submit">Login</button>
     </div>
+    <nav><a href="/signup">Sign up instead</a></nav>
 </form>
 
 <script src="/js/login.js"></script>
