--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,8 +2,8 @@
 
 <form class="form signup-form">
     <div class="form-group">
-        <label for="email-signup">Username:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label for="username-signup">Username:</label>
+        <input class="form-input" type="text" id="username-signup" />
     </div>
     <div class="form-group">
         <label for="password-signup">Password:</label>
@@ -14,4 +14,4 @@
     </div>
 </form>
 
-<script src="/js/signup.js"></script>
+<script src="/js/login.js"></script>
