--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,11 @@
                             <a class="nav-link" href="#">Dashboard</a>
                         </li>
                         <li class="nav-item">
+                            {{#if logged_in}}
+                            <a class="nav-link" href="/login">Logout</a>
+                            {{else}}
                             <a class="nav-link" href="/login">Login</a>
+                            {{/if}}
                         </li>
                     </ul>
                 </div>
