--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
                         </li>
                         <li class="nav-item">
                             {{#if logged_in}}
-                            <a class="nav-link" href="/login">Logout</a>
+                            <a id="logout" style="cursor: pointer;" class="nav-link">Logout</a>
                             {{else}}
                             <a class="nav-link" href="/login">Login</a>
                             {{/if}}
@@ -46,6 +46,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
