--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Dashboard</a>
+                            <a id="dashboard" class="nav-link" href="/dashboard">Dashboard</a>
                         </li>
                         <li class="nav-item">
                             {{#if logged_in}}
