--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,9 @@
 {{#each posts as |post| }}
-    <button type="button" class="btn btn-secondary btn-lg d-block">
+    <a href="/dashboard/updatepost/{{post.id}}" role="button" class="btn btn-secondary btn-lg d-block">
       <div class="card-header d-flex justify-content-between">
         <div>{{post.title}}</div>
         <div>{{post.date}}</div>
       </div>
-    </button>
+    </a>
 {{/each}}
 <a class="btn btn-primary" role="button" href="/dashboard/createpost">New Post</a></button>
