--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,16 @@
-<h2>Login</h2>
+<p class="fs-1">Login</p>
 
 <form class="form login-form">
-    <div class="form-group">
-        <label for="username-login">Username:</label>
-        <input class="form-input" type="text" id="username-login" />
+    <div class="form-group mb-3">
+        <label for="username-login" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username-login" placeholder="albertosuarez">
     </div>
-    <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+    <div class="form-group mb-3">
+        <label for="password-login" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password-login" placeholder="Type your password">
     </div>
-    <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
+    <div class="form-group mb-3">
+        <button class="btn btn-primary btn-lg d-flex w-100 justify-content-center" type="submit">Login</button>
     </div>
     <nav><a href="/signup">Sign up instead</a></nav>
 </form>
