--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
 {{#each posts as |post| }}
-<div class="card">
+<div class="card m-4">
       <div class="card-header d-flex justify-content-between">
         <div>{{post.title}}</div>
-        <div>Posted by {{post.user.username}} on {{post.date}}</div>
+        <div>Posted by {{post.user.username}} on {{format_time post.date}}</div>
       </div>
       <div class="card-body">
         <p class="card-text">{{post.description}}</p>
