--- a/views/createpost.handlebars
+++ b/views/createpost.handlebars
@@ -1,16 +1,16 @@
 <h2>Create new post</h2>
 
 <form class="form post-form">
-    <div class="form-group">
-        <span class="input-group-text">Title</span>
+    <div class="form-group update-post mt-3">
+        <span class="form-label">Title</span>
         <textarea class="form-control" id="title" aria-label="With textarea"></textarea>
     </div>
-    <div class="form-group">
-        <span class="input-group-text">Description</span>
+    <div class="form-group mt-3">
+        <span class="form-label">Description</span>
         <textarea class="form-control" id="description" aria-label="With textarea"></textarea>
     </div>
-    <div class="form-group">
-        <button class="btn btn-primary" type="submit">Create</button>
+    <div class="form-group d-flex justify-content-center mt-3">
+        <button id="submit" class="btn btn-primary w-100" type="submit">Create</button>
     </div>
 </form>
 
