--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -13,7 +13,7 @@
         <button id="submit" class="btn btn-primary w-100" type="submit">Update</button>
     </div>
     <div class="form-group d-flex justify-content-center mt-3">
-        <button id="delete" class="btn btn-primary w-100" type="button">Delete</button>
+        <button id="delete" class="btn btn-danger w-100" type="button">Delete</button>
     </div>
 </form>
 
